# obs-graphical-volmeter

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
ci/windows/: package-windows.sh
cmake/: ObsPluginHelpers.cmake
data/: volmeter.effect
data/locale/: en-US.ini
src/: global-config.c  global-config.h  graphical-volmeter.c  plugin-macros.h.in  plugin-main.c  util.c  util.h  volmeter.c  volmeter.h
